--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "unified-node-open-mining-portal",
     "version": "1.0.0",
+    "remark": "ForkHash added to support ForkGen crypto coins",
+    "forkHash": "0dc8dbdf87e401ae4ded25bbac54ec3711170efd26f34a9ce9281515246948cd",
     "description": "An extremely efficient, highly scalable, all-in-one, easy to setup cryptocurrency mining pool",
     "keywords": [
         "stratum",
@@ -11,9 +13,9 @@
         "bitcoin",
         "litecoin",
         "scrypt",
-	"merged",
-	"multipool",
-	"multicoin"
+        "merged",
+        "multipool",
+        "multicoin"
     ],
     "homepage": "https://github.com/UNOMP/unified-node-open-mining-portal",
     "bugs": {
@@ -41,8 +43,8 @@
     "dependencies": {
         "merged-pooler": "git://github.com/UNOMP/node-merged-pool",
         "dateformat": "1.0.12",
-	"log4js": "0.6.31",
-	"bitcoin": "3.0.1",
+        "log4js": "0.6.31",
+        "bitcoin": "3.0.1",
         "node-json-minify": "1.0.0",
         "redis": "2.4.2",
         "mysql": "2.10.2",
